@@ -231,3 +231,6 @@
 
 	* Entry: Added support for various new key bindings:
 	Ctrl+Arrows, Ctrl+Del and Ctrl+Backspace.
+	* Entry: Added cursor,changed,manual signal.
+	This signal indicates the cursor has been manually changed, i.e by
+	either mouse click or arrows.
